demo-data/ingress-bws-1.6.4/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
  name: ingress-bws
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
    app.kubernetes.io/part-of: ingress-bws
    app.kubernetes.io/version: 1.6.4
  name: ingress-bws-controller
  namespace: ingress-bws
spec:
  #externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
    nodePort: 18080
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
    nodePort: 18443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
    app.kubernetes.io/part-of: ingress-bws
    app.kubernetes.io/version: 1.6.4
  name: ingress-bws-controller-admission
  namespace: ingress-bws
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
    app.kubernetes.io/part-of: ingress-bws
    app.kubernetes.io/version: 1.6.4
  name: ingress-bws-controller
  namespace: ingress-bws
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-bws
      app.kubernetes.io/name: ingress-bws
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-bws
        app.kubernetes.io/name: ingress-bws
    spec:
      containers:
      - args:
        - /bws-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/ingress-bws-controller
        - --election-id=ingress-bws-leader
        - --controller-class=k8s.io/ingress-bws
        - --ingress-class=bws
        - --configmap=$(POD_NAMESPACE)/ingress-bws-controller
        - --validating-webhook=:8443
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key
        image: bessystem/cloudlink-cmp/bws-ingress-controller:v1.6.4
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8443
          name: webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        volumeMounts:
        - mountPath: /usr/local/certificates/
          name: webhook-cert
          readOnly: true
        - mountPath: /opt/bes/bws/license/bws.lic.txt
          name: bws-license
          subPath: path/to/bws.lic.txt
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-bws
      terminationGracePeriodSeconds: 300
      volumes:
      - name: webhook-cert
        secret:
          secretName: ingress-bws-admission
      - name: bws-license
        configMap:
          name: cm-bws-license
          defaultMode: 493
          items:
          - path: path/to/bws.lic.txt
            key: bws-license
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
    app.kubernetes.io/part-of: ingress-bws
    app.kubernetes.io/version: 1.6.4
  name: bws
spec:
  controller: k8s.io/ingress-bws
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ingress-bws
    app.kubernetes.io/name: ingress-bws
    app.kubernetes.io/part-of: ingress-bws
    app.kubernetes.io/version: 1.6.4
  name: ingress-bws-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ingress-bws-controller-admission
      namespace: ingress-bws
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.bws.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
